<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".telasiniciais.TelaLogin">

    <ImageView
        android:id="@+id/img_kid"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/img_login"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TitleProject"
        android:textColor="@color/yellow"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_kid"/>

    <View
        android:id="@+id/background_white_login"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/background_white"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Title"
        android:layout_marginHorizontal="5dp"
        />

    <TextView
        android:id="@+id/bem_vindotext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textAlignment="center"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="@id/background_white_login"
        app:layout_constraintStart_toStartOf="@id/background_white_login"
        app:layout_constraintEnd_toEndOf="@id/background_white_login"
        />

    <EditText
        android:id="@+id/EditUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/bem_vindotext"
        android:background="@drawable/backgroud_edit_text"
        android:padding="15dp"
        android:inputType="text"
        android:drawableEnd="@drawable/baseline_email_24"
        app:layout_constraintStart_toStartOf="@id/background_white_login"
        app:layout_constraintEnd_toEndOf="@id/background_white_login"
        />

    <EditText
        android:id="@+id/EditSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Senha"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/backgroud_edit_text"
        android:padding="15dp"
        android:drawableEnd="@drawable/baseline_password_24"
        app:layout_constraintTop_toBottomOf="@id/EditUsuario"
        app:layout_constraintStart_toStartOf="@id/background_white_login"
        app:layout_constraintEnd_toEndOf="@id/background_white_login"/>

    <TextView
        android:id="@+id/EsqueceuSenha_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/esqueceuSenha"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/EditSenha"
        app:layout_constraintStart_toStartOf="@id/background_white_login"
        app:layout_constraintEnd_toEndOf="@id/background_white_login"
        app:layout_constraintBottom_toTopOf="@+id/Button_Entrar"
        />
    
    <Button
        android:id="@+id/Button_Entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/RealizarLogin"
        android:backgroundTint="@color/pinkish_red"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toBottomOf="@id/EsqueceuSenha_txt"
        app:layout_constraintStart_toStartOf="@id/background_white_login"
        app:layout_constraintEnd_toEndOf="@id/background_white_login"
        app:layout_constraintBottom_toBottomOf="@id/background_white_login"
        android:layout_marginHorizontal="30dp"
        />

    <TextView
        android:id="@+id/semcadastro_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SemCadastro"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/background_white_login"
        app:layout_constraintBottom_toTopOf="@+id/Button_NovoCadastro"
        />

    <Button
        android:id="@id/Button_NovoCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/NovoCadastro"
        android:backgroundTint="@color/pinkish_red"
        app:layout_constraintTop_toBottomOf="@id/semcadastro_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="30dp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>