<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@drawable/background_cad"
    tools:context=".telasiniciais.TelaCadastro">

    <View
        android:id="@+id/icon_voltar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"/>

    <View
        android:id="@+id/background_white_login"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:background="@drawable/background_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="160dp"
        android:layout_marginHorizontal="5dp"
        />

    <TextView
        android:id="@+id/CadastroResponsavel_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CadastroResponsável"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="@+id/background_white_login"
        />

    <EditText
        android:id="@+id/EditNomeResponsavel_Cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/backgroud_edit_text"
        android:drawableEnd="@drawable/baseline_name"
        android:padding="12dp"
        android:maxLength="28"
        app:layout_constraintTop_toBottomOf="@+id/CadastroResponsavel_txt"
        />

    <EditText
        android:id="@+id/EditEmailResponsavel_Cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/backgroud_edit_text"
        android:padding="12dp"
        android:drawableEnd="@drawable/baseline_email_24"
        android:maxLength="28"
        app:layout_constraintTop_toBottomOf="@+id/EditNomeResponsavel_Cadastro"
        />

    <EditText
        android:id="@+id/EditSenhaResponsavel_Cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Senha"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:inputType="textPassword"
        android:background="@drawable/backgroud_edit_text"
        android:padding="12dp"
        android:drawableEnd="@drawable/baseline_password_24"
        android:maxLength="28"
        app:layout_constraintTop_toBottomOf="@+id/EditEmailResponsavel_Cadastro"
        />

    <EditText
        android:id="@+id/EditConfirmeSenhaResponsavel_Cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Confirme a sua senha"
        android:drawableEnd="@drawable/baseline_password_24"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/backgroud_edit_text"
        android:maxLength="28"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/EditSenhaResponsavel_Cadastro"
        />

    <EditText
        android:id="@+id/EditTelefoneResponsavel_Cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Celular"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/backgroud_edit_text"
        android:padding="12dp"
        android:inputType="phone"
        android:drawableEnd="@drawable/baseline_phone_24"
        android:maxLength="11"
        app:layout_constraintTop_toBottomOf="@+id/EditConfirmeSenhaResponsavel_Cadastro"
        />

    <TextView
        android:id="@+id/EscolhaOpcaoAdequada_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolha_adq"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/EditTelefoneResponsavel_Cadastro"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/saude"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:srcCompat="@drawable/person1"
        app:layout_constraintTop_toBottomOf="@id/EscolhaOpcaoAdequada_txt"
        app:shapeAppearanceOverlay="@style/circular"
        android:scaleType="centerCrop"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/background_white_login"
        app:layout_constraintEnd_toStartOf="@id/pai"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/pai"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:srcCompat="@drawable/person2"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/EscolhaOpcaoAdequada_txt"
        app:shapeAppearanceOverlay="@style/circular"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@id/saude"
        app:layout_constraintEnd_toStartOf="@id/mae"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/mae"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:srcCompat="@drawable/person3"
        app:layout_constraintTop_toBottomOf="@id/EscolhaOpcaoAdequada_txt"
        app:shapeAppearanceOverlay="@style/circular"
        android:scaleType="centerCrop"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@id/pai"
        app:layout_constraintEnd_toEndOf="@id/background_white_login"
        />

    <TextView
        android:id="@+id/areasaude_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AreaSaude"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/saude"
        app:layout_constraintEnd_toEndOf="@id/saude"
        app:layout_constraintStart_toStartOf="@id/saude"
        />

    <TextView
        android:id="@+id/pai_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pai"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/pai"
        app:layout_constraintEnd_toEndOf="@id/pai"
        app:layout_constraintStart_toStartOf="@id/pai"
        />

    <TextView
        android:id="@+id/mae_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mae"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/mae"
        app:layout_constraintEnd_toEndOf="@id/mae"
        app:layout_constraintStart_toStartOf="@id/mae"
        />

    <Button
        android:id="@+id/ButtonProsseguir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/Prosseguir"
        android:backgroundTint="@color/pinkish_red"
        app:layout_constraintTop_toBottomOf="@id/pai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="@id/background_white_login"
        android:layout_marginHorizontal="30dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>