<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_cad"
    tools:context=".telasiniciais.TelaCadastroKids">

    <View
        android:id="@+id/icon_voltar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        />

    <View
        android:id="@+id/background_white_login"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/background_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp"
        android:layout_marginHorizontal="5dp"
        />

    <TextView
        android:id="@+id/CadastroCriança_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cadastro: Criança"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toTopOf="@+id/background_white_login"
        />

    <EditText
        android:id="@+id/EditNomeCriança_Cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/backgroud_edit_text"
        android:padding="12dp"
        android:drawableEnd="@drawable/baseline_name"
        app:layout_constraintTop_toBottomOf="@+id/CadastroCriança_txt"
        />

    <EditText
        android:id="@+id/EditDataNascimentoCriança_Cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/DatadeNascimento"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/backgroud_edit_text"
        android:padding="12dp"
        android:drawableEnd="@drawable/baseline_person_24"
        app:layout_constraintTop_toBottomOf="@+id/EditNomeCriança_Cadastro"
        />

    <TextView
        android:id="@+id/GeneroCriançaTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GeneroCriançaTxt"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/EditDataNascimentoCriança_Cadastro"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/menino"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/person4"
        app:layout_constraintTop_toBottomOf="@id/GeneroCriançaTxt"
        app:shapeAppearanceOverlay="@style/circular"
        android:scaleType="centerCrop"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/background_white_login"
        app:layout_constraintEnd_toStartOf="@id/menina"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/menina"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/person5"
        app:layout_constraintTop_toBottomOf="@id/GeneroCriançaTxt"
        app:shapeAppearanceOverlay="@style/circular"
        android:scaleType="centerCrop"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/menino"
        app:layout_constraintEnd_toEndOf="@id/background_white_login"
        />

    <TextView
        android:id="@+id/menino_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Menino"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/menino"
        app:layout_constraintEnd_toEndOf="@id/menino"
        app:layout_constraintStart_toStartOf="@id/menino"
        />

    <TextView
        android:id="@+id/menina_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Menina"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/menina"
        app:layout_constraintEnd_toEndOf="@id/menina"
        app:layout_constraintStart_toStartOf="@id/menina"
        />

    <Button
        android:id="@id/Button_NovoCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/EfetuarCadastro"
        android:backgroundTint="@color/pinkish_red"
        app:layout_constraintTop_toBottomOf="@id/menino_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="@id/background_white_login"
        android:layout_marginHorizontal="30dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>